--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+# data files
+*.gz
+
+# data directories
+data/
+figures/
+
+# jupyter notebook checkpoint files
+.ipynb_checkpoints/
+
+# .DS_Store files
+*.DS_Store
+
+# log files
+*log*.txt
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
