started normalization figures to include UMAP of normalized values

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,11 @@
 
 # data directories
 data/
-figures/
+
+# figures
+*.png
+*.jpg
+*.svg
 
 # jupyter notebook checkpoint files
 .ipynb_checkpoints/
