--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,22 +9,20 @@ packages = [{include = "barnacle-manuscript"}]
 
 [tool.poetry.dependencies]
 python = ">=3.10 <3.12"
-numpy = "^1.23"
-matplotlib = "^3.7.0"
-pandas = "^1.5.3"
-seaborn = "^0.12.2"
-rpy2 = "^3.5.8"
-notebook = "^6.5.2"
-xarray = "^2023.2.0"
-netcdf4 = "^1.6.2"
-scikit-learn = "^1.2.1"
-numba = "^0.56.4"
-umap-learn = "^0.5.3"
-tensorly = "^0.8.0"
+numpy = "^1.26.1"
+pandas = "^2.1.1"
+matplotlib = "^3.8.0"
+scikit-learn = "^1.3.1"
+seaborn = "^0.13.0"
+xarray = "^2023.9.0"
+notebook = "^7.0.5"
+rpy2 = "^3.5.14"
+netcdf4 = "^1.6.4"
+h5py = "^3.10.0"
+tensorly = "^0.8.1"
 tensorly-lab = {git = "https://github.com/tensorly/lab.git"}
-h5py = "^3.8.0"
 barnacle = {git = "https://github.com/blasks/barnacle.git"}
-
+pycmap = "^0.2.19"
 
 [build-system]
 requires = ["poetry-core"]
