--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pycmap = "^0.2.19"
 xlrd = "^2.0.1"
 tensorly-lab = {git = "https://github.com/tensorly/lab.git", rev = "f0695f0"}
 barnacle = {git = "https://github.com/blasks/barnacle.git", rev = "612b6a4"}
+umap-learn = "^0.5.4"
 
 [build-system]
 requires = ["poetry-core"]
