--- a/analyses/4-fitting/config/5-high-rank.toml
+++ b/analyses/4-fitting/config/5-high-rank.toml
@@ -1,6 +1,6 @@
 [grid] # rank and lambda values to be evaluated in grid search (all-by-all)
-ranks = [1, 25, 50, 100, 200, 400, 800]
-lambdas = [[10.0, 0.0, 0.0], [15.0, 0.0, 0.0]]
+ranks = [1, 25, 50, 100, 200, 400, 800, 1600]
+lambdas = [[10.0, 0.0, 0.0]]
 
 [params] # other parameters passed to the SparseCPTensor model, constant across grid search
 nonneg_modes = [1, 2]
