removed necroptosis kegg pathway from enrichement, started making gene weight panel for fig 7

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ xlrd = "^2.0.1"
 tensorly-lab = {git = "https://github.com/tensorly/lab.git", rev = "f0695f0"}
 barnacle = {git = "https://github.com/blasks/barnacle.git", rev = "612b6a4"}
 umap-learn = "^0.5.4"
+openpyxl = "^3.1.2"
 
 [build-system]
 requires = ["poetry-core"]
