--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ tensorly-lab = {git = "https://github.com/tensorly/lab.git", rev = "f0695f0"}
 barnacle = {git = "https://github.com/blasks/barnacle.git", rev = "612b6a4"}
 umap-learn = "^0.5.4"
 openpyxl = "^3.1.2"
+kaleido = "0.2.1"
 
 [build-system]
 requires = ["poetry-core"]
