--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ barnacle = {git = "https://github.com/blasks/barnacle.git", rev = "612b6a4"}
 umap-learn = "^0.5.4"
 openpyxl = "^3.1.2"
 kaleido = "0.2.1"
+scikit-image = "^0.22.0"
 
 [build-system]
 requires = ["poetry-core"]
